--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="Lionystt">
+  <meta itemprop="name" content="Lionystt">
+  <meta name="keywords" content="IDE,Interpreter,Compiler,replit,github,Teach,Host,Learn,Code,REPL,Compiler,Clojure,Haskell,Kotlin,QBasic,Forth,LOLCODE,BrainF,Emoticon,Bloop,Unlambda,CoffeeScript,Scheme,APL,Lua,Ruby,Roy,Python,Node.js,Deno (beta),Go,C++,C,C#,F#,HTML, CSS, JS,Rust,Swift,Python (with Turtle),Basic (beta),R,Bash,Crystal,Julia,Elixir,Nim,Dart,Reason Node.js,Tcl,Erlang,TypeScript,Pygame,Love2D,Emacs Lisp (Elisp),PHP Web Server,SQLite,Java,PHP CLI,Pyxel,Raku,Scala (beta),Nix (beta),Kaboom (beta)"><meta name="author" property="og:author" content="replit"><meta name="twitter:card" content="summary"><meta name="twitter:site" content="@replit"><meta name="twitter:domain" content="lionystt.github.io"><meta name="google" value="notranslate"><meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lionystt</title>
   <link href="Homepage.css" rel="stylesheet" type="text/css" />
 </head>
