--- a/index.html
+++ b/index.html
@@ -17,17 +17,21 @@
  <!-- <nav id="nav"><ul id="ul"><li>Home</li><li>Services</li><li>About Us</li><li>Contact</li></ul> </nav>-->
 <div id="all"> <header id ="header"><h1 id="h1">Lionyst</h1></header>
   <main id ="main"><p>Learn Basics Of Programming From Absolute Beginning.</p>
-  <div id="html">
-    <p>Start Learning HTML</p>
+  <div id="webdev"><a class="tutlinks" href="/webdev/webdevintro.html">
+    <img src = "https://cdn-icons-png.flaticon.com/512/2210/2210153.png" width="200" height="200" alt="wd">
+    <p>Start Learning HTML</p></a>
   </div>
-    <div id="css">
-    <p>Start Learning CSS</p>
+    <div id="java"><a class="tutlinks" href="#">
+      <img src = "https://cdn.iconscout.com/icon/free/png-256/free-java-59-1174952.png" width="200" height="200" alt="css">
+    <p>Start Learning Java</p></a>
     </div>
-    <div id="js">
-    <p>Start Learning JavaScript</p>
+    <div id="cpp"><a class="tutlinks" href="#">
+      <img src = "https://ih1.redbubble.net/image.2088244373.1060/raf,750x1000,075,t,000000:44f0b734a5.u4.jpg" width="200" height="200" alt="js">
+    <p>Start Learning C++</p></a>
   </div>
-    <div id="python">
-    <p>Start Learning Python</p>
+    <div id="python"><a class="tutlinks" href="#">
+      <img src="https://raw.githubusercontent.com/python-pillow/pillow-logo/main/pillow-logo-248x250.png" width="200" height="200" alt="python">
+    <p>Start Learning Python</p></a>
     </div>
   </main>
    <hr>
