--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <p>Start Learning HTML</p></a>
   </div>
     <div id="java"><a class="tutlinks" href="#">
-      <img src = "https://cdn.iconscout.com/icon/free/png-256/free-java-59-1174952.png" width="200" height="200" alt="css">
+      <img src = "https://icons-for-free.com/iconfiles/png/512/java+icon-1320167912601224138.png" width="200" height="200" alt="css">
     <p>Start Learning Java</p></a>
     </div>
     <div id="cpp"><a class="tutlinks" href="#">
-      <img src = "https://ih1.redbubble.net/image.2088244373.1060/raf,750x1000,075,t,000000:44f0b734a5.u4.jpg" width="200" height="200" alt="js">
+      <img src = "https://cdn3d.iconscout.com/3d/free/thumb/free-c-language-logo-6563484-5453029.png" width="200" height="200" alt="js">
     <p>Start Learning C++</p></a>
   </div>
     <div id="python"><a class="tutlinks" href="#">
