--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
 <div id="all"> <header id ="header"><h1 id="h1">Lionyst</h1></header>
   <main id ="main"><p>Learn Basics Of Programming From Absolute Beginning.</p>
   <div id="webdev"><a class="tutlinks" href="/webdev/webdevintro.html">
-    <img src = "https://cdn-icons-png.flaticon.com/512/2210/2210153.png" width="200" height="200" alt="wd">
-    <p>Start Learning HTML</p></a>
+    <img src = "webdev.png" width="200" height="200" alt="wd">
+    <p>Start Learning Web Development</p></a>
   </div>
     <div id="java"><a class="tutlinks" href="#">
-      <img src = "https://icons-for-free.com/iconfiles/png/512/java+icon-1320167912601224138.png" width="200" height="200" alt="css">
+      <img src = "java.png" width="200" height="200" alt="css">
     <p>Start Learning Java</p></a>
     </div>
     <div id="cpp"><a class="tutlinks" href="#">
-      <img src = "https://cdn3d.iconscout.com/3d/free/thumb/free-c-language-logo-6563484-5453029.png" width="200" height="200" alt="js">
+      <img src = "c++.png" width="200" height="200" alt="js">
     <p>Start Learning C++</p></a>
   </div>
     <div id="python"><a class="tutlinks" href="#">
-      <img src="https://raw.githubusercontent.com/python-pillow/pillow-logo/main/pillow-logo-248x250.png" width="200" height="200" alt="python">
+      <img src="python.png" width="200" height="200" alt="python">
     <p>Start Learning Python</p></a>
     </div>
   </main>
