--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p>Start Learning Java</p></a>
     </div>
     <div id="cpp"><a class="tutlinks" href="#">
-      <img src = "c++.png" width="200" height="200" alt="js">
+      <img src = "cpp.png" width="200" height="200" alt="js">
     <p>Start Learning C++</p></a>
   </div>
     <div id="python"><a class="tutlinks" href="#">
