--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <p>Start Learning Web Development</p></a>
   </div>
     <div id="java"><a class="tutlinks" href="#">
-      <img src = "java.png" width="200" height="200" alt="css">
+      <img src = "java.png" width="200" height="200" alt="java">
     <p>Start Learning Java</p></a>
     </div>
     <div id="cpp"><a class="tutlinks" href="#">
-      <img src = "cpp.png" width="200" height="200" alt="js">
+      <img src = "cpp.png" width="200" height="200" alt="cpp">
     <p>Start Learning C++</p></a>
   </div>
     <div id="python"><a class="tutlinks" href="#">
