--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     <img src = "webdev.png" width="200" height="200" alt="wd">
     <p>Start Learning Web Development</p></a>
   </div>
-    <div id="java" hidden ><a class="tutlinks" href="#">
+    <div id="java" hidden = "true" ><a class="tutlinks" href="#">
       <img src = "java.png" width="200" height="200" alt="java">
     <p>Start Learning Java</p></a>
     </div>
-    <div id="cpp" hidden ><a class="tutlinks" href="#">
+    <div id="cpp" hidden = "true" ><a class="tutlinks" href="#">
       <img src = "cpp.png" width="400" height="250" alt="cpp">
     <p>Start Learning C++</p></a>
   </div>
-    <div id="python" hidden ><a class="tutlinks" href="#">
+    <div id="python" hidden="true" ><a class="tutlinks" href="#">
       <img src="python.png" width="200" height="200" alt="python">
     <p>Start Learning Python</p></a>
     </div>
