--- a/index.html
+++ b/index.html
@@ -4,40 +4,21 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <meta property="og:type" content="article">
-  <meta property="og:site_name" content="Lionystt">
-  <meta itemprop="name" content="Lionystt">
-  <meta name="keywords" content="IDE,Interpreter,Compiler,replit,github,Teach,Host,Learn,Code,REPL,Compiler,Clojure,Haskell,Kotlin,QBasic,Forth,LOLCODE,BrainF,Emoticon,Bloop,Unlambda,CoffeeScript,Scheme,APL,Lua,Ruby,Roy,Python,Node.js,Deno (beta),Go,C++,C,C#,F#,HTML, CSS, JS,Rust,Swift,Python (with Turtle),Basic (beta),R,Bash,Crystal,Julia,Elixir,Nim,Dart,Reason Node.js,Tcl,Erlang,TypeScript,Pygame,Love2D,Emacs Lisp (Elisp),PHP Web Server,SQLite,Java,PHP CLI,Pyxel,Raku,Scala (beta),Nix (beta),Kaboom (beta)"><meta name="author" property="og:author" content="replit"><meta name="twitter:card" content="summary"><meta name="twitter:site" content="@replit"><meta name="twitter:domain" content="lionystt.github.io"><meta name="google" value="notranslate"><meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Lionystt</title>
-  <link href="Homepage.css" rel="stylesheet" type="text/css" />
+  <title>replit</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  <!-- Har Har Mahadev -->
- <!-- <nav id="nav"><ul id="ul"><li>Home</li><li>Services</li><li>About Us</li><li>Contact</li></ul> </nav>-->
-<div id="all"> <header id ="header"><h1 id="h1"><img src="lionysttlogo.png" width="200px" height="250px" alt="logo"></h1></header>
-  <main id ="main"><p>Learn Basics Of Programming From Absolute Beginning.</p>
-  <div id="webdev"><a class="tutlinks" href="/webdev/webdevintro.html">
-    <img src = "webdev.png" width="200" height="200" alt="wd">
-    <p>Start Learning Web Development</p></a>
+  <!-- Om Namah Shivaay -->
+ <h1 id = "go">Game Over. Reload To play Again.</h1>
+  <div id = "score"></div>
+ <div id ="gameContainer"> <div id="ball"><img src="\car.png"></div>
+    <div id="obstacle"><img id="truck" src="\truck1.png"></div>
   </div>
-    <div id="java" hidden = "true" ><a class="tutlinks" href="#">
-      <img src = "java.png" width="200" height="200" alt="java">
-    <p>Start Learning Java</p></a>
-    </div>
-    <div id="cpp" hidden = "true" ><a class="tutlinks" href="#">
-      <img src = "cpp.png" width="400" height="250" alt="cpp">
-    <p>Start Learning C++</p></a>
-  </div>
-    <div id="python" hidden="true" ><a class="tutlinks" href="#">
-      <img src="python.png" width="200" height="200" alt="python">
-    <p>Start Learning Python</p></a>
-    </div>
-  </main>
-   <hr>
-  <footer id ="footer"><a href ="https://github.com/Lionystt"><svg id="svg" xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
-  <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-</svg></a></footer></div>
- <!-- <script src="script.js"></script>-->
+ 
+<!--  <div id = "in" contenteditable= "true">  Click</div>
+  <button onclick= "Run()">Run</button>-->
+  <script src="script.js"></script>
+</body>
 
 </html>
