Update and rename index.html to game.html

--- a/game.html
+++ b/game.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <title>My Game 1</title>
+  <link href="game1style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -18,7 +18,7 @@
  
 <!--  <div id = "in" contenteditable= "true">  Click</div>
   <button onclick= "Run()">Run</button>-->
-  <script src="script.js"></script>
+  <script src="game1script.js"></script>
 </body>
 
 </html>
