--- a/Calculator/calculator.html
+++ b/Calculator/calculator.html
@@ -5,20 +5,20 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Calculator</title>
-  <link href="calculatorstyle.css" rel="stylesheet" type="text/css" />
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   <!-- Om Namah Shivaay  -->
   <div id="calculatorBody">
     <div id = "calculatorScreen">
-      <div id = "calculatorScreen1"></div>
+      <div id = "calculatorScreen1" value="read-only"></div>
       <div id = "calculatorScreen2"></div>
       
     </div>
-    <div id = "calculatorButtons"></div>
+    <div id = "calculatorButtons"><div id = "calculatorButtons1"><div id="down"><p id="p">D</p></div></div></div>
   </div>
-  <script src="calculatorscript.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
