--- a/Calculator/calculator.html
+++ b/Calculator/calculator.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Calculator</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="calculatorstyle.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     </div>
     <div id = "calculatorButtons"><div id = "calculatorButtons1"><div id="down"><p id="p">D</p></div></div></div>
   </div>
-  <script src="script.js"></script>
+  <script src="calculatorscript.js"></script>
 </body>
 
 </html>
